added swapi feature

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -9,6 +9,13 @@
     </a>
     <a
       class="text-lg font-semibold text-gray-800 hover:text-blue-500 hover:underline hover:cursor-pointer"
+      routerLink="/swapi"
+      routerLinkActive="text-green-600 underline"
+    >
+      Swapi
+    </a>
+    <a
+      class="text-lg font-semibold text-gray-800 hover:text-blue-500 hover:underline hover:cursor-pointer"
       routerLink="/create"
       routerLinkActive="text-green-600 underline"
     >
